# PyFxP

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/pyfxp/: __init__.py  fix_point.py  graph.cp310-win_amd64.pyd  graph.cp311-win_amd64.pyd  graph.cp312-win_amd64.pyd  graph.cp39-win_amd64.pyd  node.cp310-win_amd64.pyd  node.cp311-win_amd64.pyd  node.cp312-win_amd64.pyd  node.cp39-win_amd64.pyd  rtlgen.cp310-win_amd64.pyd  rtlgen.cp311-win_amd64.pyd  rtlgen.cp312-win_amd64.pyd  rtlgen.cp39-win_amd64.pyd  types.py
tests/: test_fixed_point.py
